trunk/Archive2/6a/74f597f4862574/output
main.cpp:9:7: error: cannot initialize a variable of type 'E' with an lvalue of type 'int'
    E y = x;
      ^   ~
1 error generated.
